Salesforce Playground/Training Part/src/objects/Shop__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Corporation__c</fullName>
        <label>Corporation</label>
        <referenceTo>Corporation__c</referenceTo>
        <relationshipLabel>Shops</relationshipLabel>
        <relationshipName>Shops</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DirectorField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Director Field</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Shops</relationshipLabel>
        <relationshipName>Shops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <formula>IMAGE(Image_Adress__c, &apos;&apos; , 40, 40)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Adress__c</fullName>
        <label>Image Adress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Revenue__c</fullName>
        <label>Monthly Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Shop</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Shop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shops</pluralLabel>
    <recordTypes>
        <fullName>Supermarket</fullName>
        <active>true</active>
        <label>Supermarket</label>
    </recordTypes>
    <recordTypes>
        <fullName>Web_shop</fullName>
        <active>true</active>
        <label>Web shop</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_Director_Field</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(DirectorField__c)</errorConditionFormula>
        <errorMessage>Director Field should not be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Revenue</fullName>
        <active>true</active>
        <errorConditionFormula>Monthly_Revenue__c &lt;= 0</errorConditionFormula>
        <errorMessage>Monthly Revenue can&apos;t be less than or equal to zero</errorMessage>
    </validationRules>
</CustomObject>